# paxio

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile.production  LICENSE  README.md  deny.toml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.base.json  turbo.json  vitest.config.ts  vitest.specs.config.ts
.claude/: settings.json
.claude/agents/: architect.md  backend-dev.md  frontend-dev.md  icp-dev.md  registry-dev.md  reviewer.md  test-runner.md
.claude/commands/: build.md  deploy.md  test.md  typecheck.md
.claude/rules/: architect-protocol.md  architecture.md  backend-api-patterns.md  backend-architecture.md  backend-code-style.md  code-style.md  coding-standards-checklist.md  dev-startup.md  engineering-principles.md  frontend-rules.md  rust-async.md  rust-build.md  rust-error-handling.md  safety.md  scope-guard.md  startup-protocol.md  testing.md  workflow.md
.claude/skills/: metaskills
.github/workflows/: ci-backend.yml  ci-canisters.yml  ci-frontend-docs.yml  ci-frontend-fleet.yml  ci-frontend-intel.yml  ci-frontend-landing.yml  ci-frontend-marketing.yml  ci-frontend-pay.yml  ci-frontend-radar.yml  ci-frontend-registry.yml  ci-frontend-wallet.yml  ci.yml  deploy-backend.yml  diagnose-hetzner.yml  provision-admin-token.yml  release-tools.yml  root-tests.yml  scheduled-crawl.yml  spec-review.yml
.husky/: pre-commit  pre-push
app/api/: .gitkeep
app/data/: .gitkeep
app/domain/: .gitkeep
app/errors/: index.ts
app/interfaces/: clock.ts
app/lib/: clock.ts  logger.ts
app/types/: errors.ts  index.ts
apps/back/: package.json
canisters/: Cargo.toml
canisters/src/shared/: Cargo.toml
canisters/src/shared/src/: lib.rs
cli/: .gitkeep
docs/: NOUS_Development_Roadmap.md  NOUS_Strategy_v5.md  Paxio_AgentFinancialOS_v1.docx  Paxio_Frontend_TZ.docx  Paxio_Frontend_TZ.md  Paxio_Product_01_UniversalRegistry_v2.docx  Paxio_Product_02_MetaFacilitator_v2.docx  Paxio_Product_03_Wallet_v2.docx  Paxio_Product_04_Security.docx  Paxio_Product_05_BitcoinAgent.docx  Paxio_Product_06_Compliance.docx  Paxio_Product_07_Intelligence.docx  Paxio_Roadmap_v1.docx  architecture.md  deployment-hetzner.md  deployment-vercel.md  fa-registry.md  paxio-dev-environment.md  product-metrics.md  project-state.md  release-process.md  reuse-inventory.md  roadmap.md  secrets.md  tech-debt.md
docs/architecture/: BUILD-COMMANDS.md  ICP-PRINCIPLE.md  MONOREPO.md
docs/dev/: worktree-isolation.md
docs/e2e/: M00-foundation-canary.md  TEMPLATE.md
docs/feature-areas/: FA-01-registry-architecture.md  FA-02-payment-facilitator-architecture.md  FA-03-wallet-canister-architecture.md  FA-04-security-layer-architecture.md  FA-05-bitcoin-agent-architecture.md  FA-06-compliance-architecture.md  FA-07-intelligence-layer-architecture.md
docs/sprints/: M-L0-progressive-reveal.md  M-L1-T10-huggingface.md  M-L1-T3-wiring-httpclient.md  M-L1-T3b-fetch-post.md  M-L1-expansion.md  (+56 more)
opensrc/: .gitignore  INDEX.md  README.md  fetch.sh  settings.json  sources.json
platform/canister-shared/: Cargo.toml
platform/canister-shared/src/: ids.rs  lib.rs
platform/canister-shared/tests/: ids.rs
products/03-wallet/canister/: Cargo.toml  wallet.did
products/03-wallet/canister/src/: addresses.rs  ecdsa.rs  errors.rs  lib.rs  storage.rs  types.rs
products/03-wallet/canister/tests/: wallet_test.rs
products/04-security/canister/: Cargo.toml  security_sidecar.did
products/04-security/canister/src/: errors.rs  lib.rs  storage.rs  types.rs  verifier.rs
products/04-security/canister/tests/: intent_verifier_test.rs
products/06-compliance/canisters/audit-log/: Cargo.toml  audit_log.did
products/06-compliance/canisters/audit-log/src/: chain.rs  errors.rs  lib.rs  storage.rs  types.rs
products/06-compliance/canisters/audit-log/tests/: chain_test.rs
scripts/: bundle-vm-modules.mjs  copy-api-handlers.mjs  css-coverage-check.sh  dfx-env.sh  dfx-setup.sh  quality-gate.sh  server-syntax-check.sh  vercel-ignore-build.sh  verify_M-L1-T10-huggingface.sh  verify_M-L1-T3b-fetch-post.sh  verify_M-L1-T3d-body-stringify.sh  verify_M-L1-T3e-storage-defaults.sh  verify_M-L1-T3f-did-network-hyphens.sh  verify_M-L1-T3g-migration-004-wire.sh  verify_M-L1-T3h-cron-matrix.sh  verify_M-L1-T3i-crawler-logger.sh  verify_M-L1-expansion.sh  verify_M-L1-launch.sh  verify_M-L1-taxonomy.sh  verify_M-L10.2.sh  verify_M-L10.3.sh  verify_M-L10.4.sh  verify_M-L10.5.sh  verify_M-L10.6.sh  verify_M-L10.7.1.5.sh  verify_M-L10.7.1.sh  verify_M-L10.7.2.sh  verify_M-L10.7.3.sh  verify_M-L10.sh  verify_M-L11-P4.sh  verify_M-L11-P6.sh  verify_M-L11.sh  verify_M-L8_local.sh  verify_M-L8_smoke.sh  verify_M-Q1.sh  verify_M-Q10.sh  verify_M-Q11.sh  verify_M-Q12.sh  verify_M-Q2.sh  verify_M-Q20.sh  (+33 more)
tests/: agent-card-extension.test.ts  agent-card-taxonomy.test.ts  architect-no-spawn-rule.test.ts  architect-self-review.test.ts  audit-log-contracts.test.ts  clock.test.ts  context-budget-drift.test.ts  contracts.test.ts  crawler-launch-contract.test.ts  errors-cjs-sync.test.ts  errors.test.ts  fap-rails-catalog.test.ts  frontend-bootstrap.test.ts  frontend-td-fixes.test.ts  health-endpoint.test.ts  intelligence-contracts.test.ts  landing-b5-foundation-drift.test.ts  landing-contracts.test.ts  logger.test.ts  m-q10-dedup-agents.test.ts  m-q11-no-eager-skills.test.ts  m-q12-slim-claude-md.test.ts  m-q13-rules-to-skills.test.ts  m-q16-dev-startup-hardening.test.ts  m-q17-tmpdir-no-literal-home.test.ts  m-q18-architect-on-demand-skills.test.ts  m-q18-precommit-detached-head.test.ts  m-q19-cleanup-mandate.test.ts  m-q20-frontend-visual-governance.test.ts  m-q21-backend-syntax-gate.test.ts  m-q22-reviewer-chore-coverage.test.ts  m-q8-role-aware-startup.test.ts  m-q9-dedup-rules.test.ts  m-vercel-ignore-build.test.ts  marketing-contracts.test.ts  pre-commit-hook.test.ts  process-hygiene-drift.test.ts  quality-gate.test.ts  registry-contracts.test.ts  registry-crawler-contract.test.ts  (+12 more)
(+231 files in other folders)
