[workspace]
resolver = "2"
members = [
    "src/shared",
    # registry, wallet, audit_log, reputation, security_sidecar, bitcoin_agent
    # will be added in M01-M04 when ported from bitgent.
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paxio <dev@paxio.network>"]
license = "UNLICENSED"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
thiserror = "1"
